bk_ida/gccida/g0/parse_number
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_number/src/cppexp.c:554:23: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  parse_number_0( cpp_reader_0 *pfile, cpp_string_0 *number, cppchar_t c, int leading_period) 
                      ^~~~~~~~~~~~
                      cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_number/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_number/src/cppexp.c:554:44: error: unknown type name 'cpp_string_0'; did you mean 'cpp_string'?
void  parse_number_0( cpp_reader_0 *pfile, cpp_string_0 *number, cppchar_t c, int leading_period) 
                                           ^~~~~~~~~~~~
                                           cpp_string
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_number/src/cpplib.h:41:27: note: 'cpp_string' declared here
typedef struct cpp_string cpp_string;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_number/src/cppexp.c:561:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // [rsp+28h] [rbp-18h] 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_number/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_number/src/cppexp.c:593:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)ca] & 0x204) == 0 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_number/src/cppexp.c:604:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)ca] & 0x204) == 0 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parse_number/src/obj/cppexp.o] Error 1
